# serde_trim

./: Cargo.toml  README.md  lib.rs
.github/workflows/: check.yml
