[package]
name = "serde_trim"
version = "0.2.0"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
edition = "2021"
description = "serde deserialize_with String trim"
keywords = ["serde", "serde_trim", "deserialize_trim", "deserialize_with", "serde_json"]
readme = "README.md"
categories = ["encoding"]
repository = "https://github.com/baoyachi/serde_trim"
license = "MIT AND Apache-2.0"

[lib]
path = "lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
trim-in-place = "0.1.7"

[dev-dependencies]
serde_json = { version = "1" }